@@ -411,15 +411,6 @@ extern enum language set_language (enum language);
    && ((c) < 0x7F || (c) >= 0xA0)	\
    && (!sevenbit_strings || (c) < 0x80))
 
-#if 0
-/* FIXME: cagney/2000-03-04: This function does not appear to be used.
-   It can be deleted once 5.0 has been released. */
-/* Return a string that contains the hex digits of the number.  No preceeding
-   "0x" */
-
-extern char *longest_raw_hex_string (LONGEST);
-#endif
-
 /* Type predicates */
 
 extern int simple_type (struct type *);
